force-app/main/default/objects/Implementation__c/fields/GIACT_results__c.field-meta.xml
<CustomField>
    <fullName>GIACT_results__c</fullName>
    <description>Confirm if GIACT review resulted in Pass or Fail</description>
    <inlineHelpText>Confirm if GIACT review resulted in Pass or Fail</inlineHelpText>
    <label>GIACT results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>