force-app/main/default/objects/Implementation__c/fields/Grandfather_Date__c.field-meta.xml
<CustomField>
    <fullName>Grandfather_Date__c</fullName>
    <description>Employees hired before this date are grandfathered into the plan.</description>
    <inlineHelpText>Employees hired before this date are grandfathered into the plan.</inlineHelpText>
    <label>Grandfather Date</label>
    <type>Date</type>
</CustomField>