force-app/main/default/objects/Implementation__c/fields/Hardship_Distrobutions__c.field-meta.xml
<CustomField>
    <fullName>Hardship_Distrobutions__c</fullName>
    <description>Are hardship distributions allowed on this plan?</description>
    <inlineHelpText>Are hardship distributions allowed on this plan?</inlineHelpText>
    <label>Hardship Distributions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>