force-app/main/default/objects/Implementation__c/fields/Imp_Owner_Intro_Call_Link__c.field-meta.xml
<CustomField>
    <fullName>Imp_Owner_Intro_Call_Link__c</fullName>
    <formula>Owner:User.Calendly_Introductory_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imp Owner Intro Call Link</label>
    <type>Text</type>
</CustomField>