force-app/main/default/objects/Implementation__c/fields/Imp_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Imp_Owner_Name__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imp Owner Name</label>
    <type>Text</type>
</CustomField>