force-app/main/default/objects/Implementation__c/fields/Implementation_Age__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Age__c</fullName>
    <formula>IF(ISPICKVAL(Implementation_Status__c,&quot;Completed&quot;),(Implementation_Completion_Date__c-Agreement_Received__c),IF(ISPICKVAL(Implementation_Status__c,&quot;No Start&quot;),( No_Start_Date__c -Agreement_Received__c),(TODAY()- Agreement_Received__c)))- Plan_Hold_Days__c</formula>
    <inlineHelpText>Number of days since Agreement Received - stops counting when &quot;Implementation Complete&quot; date is entered.</inlineHelpText>
    <label>Implementation Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>