force-app/main/default/objects/Implementation__c/fields/Implementation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Completion_Date__c</fullName>
    <inlineHelpText>Date Implementation is Complete</inlineHelpText>
    <label>Implementation Completion Date</label>
    <type>Date</type>
</CustomField>