force-app/main/default/objects/Implementation__c/fields/Implementation_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Dashboard__c</fullName>
    <description>Hyperlink to Implementation Dashboard</description>
    <formula>HYPERLINK((&quot;https://getstarted.myubiquity.com/&quot; + Implementation_ID_18_Char__c), &quot;Plan Overview&quot; , &quot;_blank&quot;)</formula>
    <inlineHelpText>Hyperlink to Implementation Dashboard</inlineHelpText>
    <label>Implementation Dashboard</label>
    <type>Text</type>
</CustomField>