force-app/main/default/objects/Implementation__c/fields/Implementation_Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Dashboard_Link__c</fullName>
    <description>Link to Implementations Client dashboard</description>
    <formula>&quot;https://getstarted.myubiquity.com/&quot; + Implementation_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Implementations Client dashboard</inlineHelpText>
    <label>Implementation Dashboard Link</label>
    <type>Text</type>
</CustomField>