force-app/main/default/objects/Implementation__c/fields/Implementation_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Implementation_ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation ID (18 Char)</label>
    <type>Text</type>
</CustomField>