force-app/main/default/objects/Implementation__c/fields/Implementation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Notes__c</fullName>
    <label>Implementation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>