force-app/main/default/objects/Implementation__c/fields/Implementation_QA_Check__c.field-meta.xml
<CustomField>
    <fullName>Implementation_QA_Check__c</fullName>
    <description>Date Implementations completes QA check of Implementation steps up through Census Uploaded</description>
    <inlineHelpText>Date Implementations completes QA check of Implementation steps up through Census Uploaded</inlineHelpText>
    <label>Implementation QA Check</label>
    <type>Date</type>
</CustomField>