force-app/main/default/objects/Implementation__c/fields/Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Stage__c</fullName>
    <description>Various Stages of the Implementation process</description>
    <inlineHelpText>Various Stages of the Implementation process</inlineHelpText>
    <label>Implementation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
                <default>true</default>
                <label>Introduction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>