force-app/main/default/objects/Implementation__c/fields/Implementation_Started__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Started__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used for Data analytics to track all Imps Started</description>
    <inlineHelpText>Used for Data analytics to track all Imps Started</inlineHelpText>
    <label>Implementation Started</label>
    <type>Checkbox</type>
</CustomField>