force-app/main/default/objects/Implementation__c/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <description>Implementation lets stakeholders quickly know the status of the implementation.</description>
    <inlineHelpText>Implementation lets stakeholders quickly know the status of the implementation.</inlineHelpText>
    <label>Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Assignment</fullName>
            </value>
            <value>
                <fullName>Plan Stalled</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>No Start</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Plan Saved</fullName>
                <isActive>false</isActive>
                <label>Plan Saved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>