force-app/main/default/objects/Implementation__c/fields/Implementation_Steps__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Steps__c</fullName>
    <description>Client facing imps steps for email and webpage</description>
    <inlineHelpText>Client facing imps steps for email and webpage</inlineHelpText>
    <label>Implementation Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introductory Tasks</fullName>
                <default>true</default>
                <label>Introductory Tasks</label>
            </value>
            <value>
                <fullName>Add Your Employees</fullName>
            </value>
            <value>
                <fullName>Funding &amp; Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>