force-app/main/default/objects/Implementation__c/fields/In_Blackout__c.field-meta.xml
<CustomField>
    <fullName>In_Blackout__c</fullName>
    <description>Hidden field - checkbox formula used to trigger &quot;Implementation| Scheduled| In Blackout flow</description>
    <formula>Blackout_Start_Date__c  &lt;= TODAY()
&amp;&amp;
 Blackout_End_Date__c  &gt; TODAY()
&amp;&amp;
 ISBLANK( Assets_Received__c ) 
&amp;&amp;
 ISBLANK( Final_Reporting_Received__c ) 
&amp;&amp;
 ISBLANK( Conversion_Assets_Posted__c )</formula>
    <inlineHelpText>Hidden field - checkbox formula used to trigger &quot;Implementation| Scheduled| In Blackout flow</inlineHelpText>
    <label>In Blackout</label>
    <type>Checkbox</type>
</CustomField>