force-app/main/default/objects/Implementation__c/fields/Intro_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you&apos;ve completed the Intro Call Steps</inlineHelpText>
    <label>Intro Call Complete</label>
    <type>Checkbox</type>
</CustomField>