force-app/main/default/objects/Implementation__c/fields/Intro_Call_First_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_First_Scheduled__c</fullName>
    <label>Intro Call First Scheduled</label>
    <type>DateTime</type>
</CustomField>