force-app/main/default/objects/Implementation__c/fields/Intro_to_K_oncierge__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_K_oncierge__c</fullName>
    <description>Intro from Implementation to Payroll (K)oncierge on Conversion Plans</description>
    <inlineHelpText>Intro from Implementation to Payroll (K)oncierge on Conversion Plans</inlineHelpText>
    <label>Intro to (K)oncierge</label>
    <type>Date</type>
</CustomField>