force-app/main/default/objects/Implementation__c/fields/Intro_to_Koncierge_CST__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_Koncierge_CST__c</fullName>
    <description>Date Implementations sends the Into emails to Payroll (K)oncierge and Client Support team.  Sent after Census is Uploaded.</description>
    <inlineHelpText>Date Implementations sends the Into emails to Payroll (K)oncierge and Client Support team.  Sent after Census is Uploaded.</inlineHelpText>
    <label>Intro to (K)oncierge &amp; CST</label>
    <type>Date</type>
</CustomField>