force-app/main/default/objects/Implementation__c/fields/Introductory_Call__c.field-meta.xml
<CustomField>
    <fullName>Introductory_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Introductory Call been completed</description>
    <inlineHelpText>Has Introductory Call been completed</inlineHelpText>
    <label>Introductory Call</label>
    <type>Checkbox</type>
</CustomField>