force-app/main/default/objects/Implementation__c/fields/Introductory_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Introductory_Call_Date_Time__c</fullName>
    <description>Date and time the Introductory Call is scheduled</description>
    <inlineHelpText>Date and time the Introductory Call is scheduled</inlineHelpText>
    <label>Introductory Call Date/Time</label>
    <type>DateTime</type>
</CustomField>