force-app/main/default/objects/Implementation__c/fields/Koncierge_Initial_Call__c.field-meta.xml
<CustomField>
    <fullName>Koncierge_Initial_Call__c</fullName>
    <description>Date of initial call with payroll (K)oncierge</description>
    <inlineHelpText>Date of initial call with payroll (K)oncierge</inlineHelpText>
    <label>(K)oncierge Initial Call</label>
    <type>Date</type>
</CustomField>