force-app/main/default/objects/Implementation__c/fields/Koncierge_Initial_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Koncierge_Initial_Call_Scheduled__c</fullName>
    <description>Date initial Payroll (K)oncierge call is scheduled for</description>
    <inlineHelpText>Date initial Payroll (K)oncierge call is scheduled for</inlineHelpText>
    <label>(K)oncierge Initial Call Scheduled</label>
    <type>Date</type>
</CustomField>