force-app/main/default/objects/Implementation__c/fields/Koncierge_QA_Check__c.field-meta.xml
<CustomField>
    <fullName>Koncierge_QA_Check__c</fullName>
    <description>QA check by Payroll (K)oncierge after Census upload to end of Implementation</description>
    <inlineHelpText>QA check by Payroll (K)oncierge after Census upload to end of Implementation</inlineHelpText>
    <label>(K)oncierge QA Check</label>
    <type>Date</type>
</CustomField>