force-app/main/default/objects/Implementation__c/fields/Koncierge_Survey_Calendly_Email__c.field-meta.xml
<CustomField>
    <fullName>Koncierge_Survey_Calendly_Email__c</fullName>
    <description>Date Payroll (K)oncierge sent welcome email with survey &amp; calendly links</description>
    <inlineHelpText>Date Payroll (K)oncierge sent welcome email with survey &amp; calendly links</inlineHelpText>
    <label>(K)oncierge Survey Calendly Email</label>
    <type>Date</type>
</CustomField>