force-app/main/default/objects/Implementation__c/fields/Koncierge_Training_Call__c.field-meta.xml
<CustomField>
    <fullName>Koncierge_Training_Call__c</fullName>
    <description>Call with client to upload 1st payroll</description>
    <inlineHelpText>Call with client to upload 1st payroll</inlineHelpText>
    <label>(K)oncierge Training Call</label>
    <type>Date</type>
</CustomField>