force-app/main/default/objects/Implementation__c/fields/Koncierge_Training_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Koncierge_Training_Call_Scheduled__c</fullName>
    <description>Date the Payroll (K)oncierge Training Call is scheduled to take place</description>
    <inlineHelpText>Date the Payroll (K)oncierge Training Call is scheduled to take place</inlineHelpText>
    <label>(K)oncierge Training Call Scheduled</label>
    <type>Date</type>
</CustomField>