force-app/main/default/objects/Implementation__c/fields/Kotapay_Doc_Created__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Doc_Created__c</fullName>
    <description>Document created and sent to client for signature</description>
    <inlineHelpText>Document created and sent to client for signature</inlineHelpText>
    <label>Kotapay Doc Created</label>
    <type>Date</type>
</CustomField>