force-app/main/default/objects/Implementation__c/fields/Kotapay_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Survey_Completed__c</fullName>
    <description>Date client submitted a Kotapay Survey.   May be a partial/incomplete survey - review survey status to verify.</description>
    <inlineHelpText>Date client submitted a Kotapay Survey.   May be a partial/incomplete survey - review survey status to verify.</inlineHelpText>
    <label>Kotapay Survey Completed</label>
    <type>Date</type>
</CustomField>