force-app/main/default/objects/Implementation__c/fields/Last_Case_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Activity_Date__c</fullName>
    <description>Date of last activity on a Case related to this Implementation</description>
    <inlineHelpText>Date of last activity on a Case related to this Implementation</inlineHelpText>
    <label>Last Case Activity Date</label>
    <type>Date</type>
</CustomField>