force-app/main/default/objects/Implementation__c/fields/Last_Case_Inbound_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Inbound_Activity__c</fullName>
    <description>Date of last activity inbound to UBQT team on a case related to this Plan</description>
    <inlineHelpText>Date of last activity inbound to UBQT team on a case related to this Plan</inlineHelpText>
    <label>Last Case Inbound Activity</label>
    <type>Date</type>
</CustomField>