force-app/main/default/objects/Implementation__c/fields/Last_Case_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Modified_Date__c</fullName>
    <description>Latest date any case linked to the implementation was modified - Any data point in the case is changed.</description>
    <inlineHelpText>Latest date any case linked to the implementation was modified - Any data point in the case is changed.</inlineHelpText>
    <label>Last Case Modified Date</label>
    <type>Date</type>
</CustomField>