force-app/main/default/objects/Implementation__c/fields/Liquidation_Date__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Date__c</fullName>
    <description>Date of assets liquidation - for SoloK Conversions, enter Assets Received date.</description>
    <inlineHelpText>Date of assets liquidation - for SoloK Conversions, enter Assets Received date.</inlineHelpText>
    <label>Liquidation Date</label>
    <type>Date</type>
</CustomField>