force-app/main/default/objects/Implementation__c/fields/Liquidation_Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Date_Confirmed__c</fullName>
    <description>Date Provider confirmed liquidation date</description>
    <inlineHelpText>Date Provider confirmed liquidation date</inlineHelpText>
    <label>Liquidation Date Confirmed</label>
    <type>Date</type>
</CustomField>