force-app/main/default/objects/Implementation__c/fields/Live_Enrollment_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Live_Enrollment_Meeting__c</fullName>
    <description>Does the client want a live enrollment meeting?</description>
    <inlineHelpText>Does the client want a live enrollment meeting?</inlineHelpText>
    <label>Live Enrollment Meeting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>