force-app/main/default/objects/Implementation__c/fields/Loan_Amortization_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amortization_Schedules__c</fullName>
    <description>Loan schedules from prior provider (if applicable) check when it&apos;s been verified not needed OR received</description>
    <inlineHelpText>Loan schedules from prior provider (if applicable) check when it&apos;s been verified not needed OR received</inlineHelpText>
    <label>Loan Amortization Schedules</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>