force-app/main/default/objects/Implementation__c/fields/Loan_Benefit_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Benefit_Status__c</fullName>
    <label>Loan Benefit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>