force-app/main/default/objects/Implementation__c/fields/Loan_Policy__c.field-meta.xml
<CustomField>
    <fullName>Loan_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Loan Policy been signed?</description>
    <inlineHelpText>Has Loan Policy been signed?</inlineHelpText>
    <label>Loan Policy</label>
    <type>Checkbox</type>
</CustomField>