force-app/main/default/objects/Implementation__c/fields/LOI_link_in_Box__c.field-meta.xml
<CustomField>
    <fullName>LOI_link_in_Box__c</fullName>
    <description>Enter box link for LOI</description>
    <inlineHelpText>Enter box link for LOI</inlineHelpText>
    <label>LOI link in Box</label>
    <type>Url</type>
</CustomField>