force-app/main/default/objects/Implementation__c/fields/LOI_Required__c.field-meta.xml
<CustomField>
    <fullName>LOI_Required__c</fullName>
    <description>Verify if LOI is required for following year plan amendment</description>
    <inlineHelpText>Verify if LOI is required for following year plan amendment</inlineHelpText>
    <label>LOI Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>