force-app/main/default/objects/Implementation__c/fields/Marked_As_Dead__c.field-meta.xml
<CustomField>
    <fullName>Marked_As_Dead__c</fullName>
    <description>Date Plan is Marked as Dead in Paradigm</description>
    <inlineHelpText>Date Plan is Marked as Dead in Paradigm</inlineHelpText>
    <label>Marked As Dead</label>
    <type>Date</type>
</CustomField>