force-app/main/default/objects/Implementation__c/fields/Matrix_Countersign_Date__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Countersign_Date__c</fullName>
    <description>Date Matrix countersigns an Agreement</description>
    <inlineHelpText>Date Matrix countersigns an Agreement</inlineHelpText>
    <label>Matrix Countersign Date</label>
    <type>Date</type>
</CustomField>