force-app/main/default/objects/Implementation__c/fields/Month_Custodial_Acct_Num_Received__c.field-meta.xml
<CustomField>
    <fullName>Month_Custodial_Acct_Num_Received__c</fullName>
    <description>Hidden field to get first day of the month the Custodial Account Number was received</description>
    <formula>DATE(
     YEAR( Custodial_Account_Number_Received__c ),
     MONTH( Custodial_Account_Number_Received__c ),
     1)</formula>
    <inlineHelpText>Hidden field to get first day of the month the Custodial Account Number was received</inlineHelpText>
    <label>Month Custodial Acct Num Received</label>
    <type>Date</type>
</CustomField>