force-app/main/default/objects/Implementation__c/fields/No_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Start_Date__c</fullName>
    <description>Date Plan No-Starts.</description>
    <inlineHelpText>Date Plan No-Starts.</inlineHelpText>
    <label>No-Start Date</label>
    <type>Date</type>
</CustomField>