force-app/main/default/objects/Implementation__c/fields/No_Start_Notes__c.field-meta.xml
<CustomField>
    <fullName>No_Start_Notes__c</fullName>
    <description>Notes related to No-Start</description>
    <inlineHelpText>Notes related to No-Start</inlineHelpText>
    <label>No-Start Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>