force-app/main/default/objects/Implementation__c/fields/No_Start_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Start_Reason__c</fullName>
    <description>Reason Plan is marked as a No-Start</description>
    <inlineHelpText>Reason Plan is marked as a No-Start</inlineHelpText>
    <label>No-Start Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisor Concern</fullName>
            </value>
            <value>
                <fullName>Auto-Enroll Requirement</fullName>
            </value>
            <value>
                <fullName>Changed Mind</fullName>
            </value>
            <value>
                <fullName>Client Backing Out</fullName>
                <isActive>false</isActive>
                <label>Client Backing Out</label>
            </value>
            <value>
                <fullName>Company Restructure</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Employees Not Interested</fullName>
            </value>
            <value>
                <fullName>Extension Too Far Out</fullName>
            </value>
            <value>
                <fullName>Fraudulent Account</fullName>
            </value>
            <value>
                <fullName>Fund Lineups</fullName>
            </value>
            <value>
                <fullName>Implementations Delays</fullName>
            </value>
            <value>
                <fullName>Integration Issues</fullName>
            </value>
            <value>
                <fullName>Integration Issues (instead of only integration as the reason)</fullName>
                <isActive>false</isActive>
                <label>Integration Issues (instead of only integration as the reason)</label>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Integration Unavailable</fullName>
            </value>
            <value>
                <fullName>No Longer A Priority</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>No Reason Given</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
            <value>
                <fullName>No Spanish Materials</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Provider</fullName>
            </value>
            <value>
                <fullName>Other Provider (Payroll In House)</fullName>
            </value>
            <value>
                <fullName>Platform Bugs</fullName>
            </value>
            <value>
                <fullName>Product Fit (Part-Time Employees)</fullName>
            </value>
            <value>
                <fullName>Product Fit (Union Employees)</fullName>
            </value>
            <value>
                <fullName>Product Type Not Available</fullName>
            </value>
            <value>
                <fullName>Switch to Principal</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Technology averse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>