force-app/main/default/objects/Implementation__c/fields/Number_of_Employees_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_From_Account__c</fullName>
    <description>Make updates on account record.</description>
    <formula>Account__r.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Make updates on account record.</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>