force-app/main/default/objects/Implementation__c/fields/Oauth_Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Connection_Status__c</fullName>
    <label>Oauth Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Reauth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>