force-app/main/default/objects/Implementation__c/fields/One_Time_Send__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Send</label>
    <type>Checkbox</type>
</CustomField>